--- a/app/src/main/res/layout/content_barcode_scan.xml
+++ b/app/src/main/res/layout/content_barcode_scan.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,10 +9,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".DownloadManifests">
+    tools:context=".BarcodeScan">
 
     <ScrollView
-        android:id="@+id/download_form"
+        android:id="@+id/barcode_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -22,7 +21,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/button_continue"/>
+            android:text="@string/button_continue" />
     </ScrollView>
 
 </LinearLayout>
