--- a/app/src/main/res/layout/content_download_manifests.xml
+++ b/app/src/main/res/layout/content_download_manifests.xml
@@ -10,7 +10,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".DownloadManifests">
+    tools:context=".DownloadManifestsActivity">
 
     <ScrollView
         android:id="@+id/download_form"
