--- a/app/src/main/res/layout/content_download_manifests.xml
+++ b/app/src/main/res/layout/content_download_manifests.xml
@@ -12,17 +12,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".DownloadManifestsActivity">
 
-    <ScrollView
-        android:id="@+id/download_form"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <ListView
+            android:id="@+id/manifest_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1" />
 
         <Button xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/button_continue"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/button_continue"/>
-    </ScrollView>
+            android:text="@string/button_continue" />
+    </LinearLayout>
 
 </LinearLayout>
