--- a/app/src/main/res/layout/content_barcode_scan.xml
+++ b/app/src/main/res/layout/content_barcode_scan.xml
@@ -6,10 +6,22 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".BarcodeScanActivity">
+    tools:context=".BarcodeScanActivity"
+    android:paddingTop="?android:attr/actionBarSize">
+
+    <Button
+        android:id="@+id/btn_sm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="open scanner" />
+
+    <TextView
+        android:id="@+id/tv_result"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
     <ScrollView
         android:id="@+id/barcode_form"
@@ -21,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="@string/button_continue" />
+            android:text="Skip" />
     </ScrollView>
 
 </LinearLayout>
