--- a/app/src/main/res/layout/content_download_manifests.xml
+++ b/app/src/main/res/layout/content_download_manifests.xml
@@ -12,10 +12,20 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".DownloadManifestsActivity">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingTop="?android:attr/actionBarSize">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/available_manifests"
+            android:textAlignment="center"
+            android:textSize="30sp" />
 
         <ListView
             android:id="@+id/manifest_list"
