--- a/app/src/main/res/layout/content_barcode_list.xml
+++ b/app/src/main/res/layout/content_barcode_list.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".BarcodeScanActivity"
+    tools:context=".BarcodeListActivity"
     android:paddingTop="?android:attr/actionBarSize">
 
     <Button
@@ -17,23 +17,19 @@
         android:layout_height="wrap_content"
         android:text="open scanner" />
 
-    <TextView
-        android:id="@+id/tv_result"
+
+    <ListView
+        android:id="@+id/barcode_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1" />
+
+    <Button xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/button_continue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:layout_marginTop="16dp"
+        android:text="Skip" />
 
-    <ScrollView
-        android:id="@+id/barcode_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <Button xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/button_continue"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Skip" />
-    </ScrollView>
 
 </LinearLayout>
