--- a/app/src/main/res/layout/content_barcode_list.xml
+++ b/app/src/main/res/layout/content_barcode_list.xml
@@ -12,7 +12,7 @@
     android:paddingTop="?android:attr/actionBarSize">
 
     <Button
-        android:id="@+id/btn_sm"
+        android:id="@+id/btn_Scan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="open scanner" />
