--- a/app/src/main/res/layout/barcode_list.xml
+++ b/app/src/main/res/layout/barcode_list.xml
@@ -5,11 +5,12 @@
 
     <TextView
         android:id="@+id/list_item_string"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:clickable="true"
         android:paddingLeft="8dp"
-        android:textSize="18sp"
+        android:textSize="24sp"
         android:textStyle="bold" />
 </RelativeLayout>
