--- a/app/src/main/res/layout/activity_initial_map.xml
+++ b/app/src/main/res/layout/activity_initial_map.xml
@@ -6,4 +6,14 @@
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".InitialMapActivity" />
+    tools:context=".InitialMapActivity" >
+
+        <ProgressBar
+        android:id="@+id/login_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone" />
+
+    </fragment>
