--- a/app/src/main/res/layout/activity_initial_map.xml
+++ b/app/src/main/res/layout/activity_initial_map.xml
@@ -8,13 +8,7 @@
     android:orientation="vertical"
     tools:context=".InitialMapActivity">
 
-    <Button
-        android:id="@+id/btn_Optimise"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="Optimise"
-        android:textStyle="bold" />
+
 
     <fragment
         xmlns:tools="http://schemas.android.com/tools"
@@ -23,6 +17,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".InitialMapActivity" >
+
+        <Button
+            android:id="@+id/btn_Optimise"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:padding="16dp"
+            android:text="Optimise"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/login_progress"
