--- a/app/src/main/res/layout/prompt_getstart.xml
+++ b/app/src/main/res/layout/prompt_getstart.xml
@@ -10,7 +10,7 @@
         android:id="@+id/alertTxtView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Use Custom Start Location: "
+        android:text=""
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <EditText
