--- a/app/src/main/res/layout/activity_initial_map.xml
+++ b/app/src/main/res/layout/activity_initial_map.xml
@@ -6,8 +6,8 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".InitialMapActivity">
 
+    tools:context=".InitialMapActivity">
 
 
     <fragment
@@ -37,6 +37,16 @@
             android:layout_marginBottom="8dp"
             android:visibility="gone" />
 
+    </fragment>
+
+
+    <fragment
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/address_list_fragment"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+         >
     </fragment>
 
 </LinearLayout>
