--- a/app/src/main/res/layout/activity_initial_map.xml
+++ b/app/src/main/res/layout/activity_initial_map.xml
@@ -28,6 +28,16 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:visibility="gone" />
+        <Button
+            android:id="@+id/btn_Continue"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="top"
+            android:padding="16dp"
+            android:text="Continue"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:visibility="gone" />
 
         <ProgressBar
             android:id="@+id/login_progress"
@@ -37,16 +47,6 @@
             android:layout_marginBottom="8dp"
             android:visibility="gone" />
 
-    </fragment>
-
-
-    <fragment
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/address_list_fragment"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-         >
     </fragment>
 
 </LinearLayout>
