--- a/app/src/main/res/layout/activity_optimised_list.xml
+++ b/app/src/main/res/layout/activity_optimised_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/container3"
-    tools:context=".AddressFragment">
+    tools:context=".OptimisedListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,6 +21,6 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_address_fragment" />
+    <include layout="@layout/content_optimised_list" />
 
 </android.support.design.widget.CoordinatorLayout>
