--- a/app/src/main/res/layout/activity_begin_route.xml
+++ b/app/src/main/res/layout/activity_begin_route.xml
@@ -1,35 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".BeginRouteActivity"
         android:layout_weight="1">
 
-        <Button
-            android:id="@+id/btn_Begin"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="top"
-            android:padding="16dp"
-            android:text="Begin"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            android:visibility="gone" />
+            android:layout_height="match_parent">
 
-    </fragment>
+            <fragment
+                android:id="@+id/map"
+                android:name="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                tools:context=".BeginRouteActivity">
+            </fragment>
+
+            <Button
+                android:id="@+id/btn_Begin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="top"
+                android:padding="16dp"
+                android:layout_alignParentBottom="true"
+                android:text="Begin"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:visibility="gone" />
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="6dp"
+            android:background="#FCFCFC"
+            android:orientation="vertical"
+            android:id="@+id/sig_container"
+            android:gravity="center|bottom"
+            android:visibility="gone"
+            >
+            <LinearLayout
+                android:id="@+id/get_sig"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_save_sig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Capture Signature"
+                android:padding="16dp"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+    </FrameLayout>
 
     <LinearLayout
         android:id="@+id/btn_panel"
@@ -48,14 +85,30 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:orientation="horizontal">
-        <TextView
-            android:id="@+id/txt_destination"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/txt_destination"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:maxLines="1"
+                    android:text="TextView"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+                <TextView
+                    android:id="@+id/txt_num_parcels"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="TextView"
+                    android:layout_weight="1"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/btn_navigate"
@@ -67,6 +120,7 @@
                 android:src="@android:drawable/ic_dialog_map" />
 
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,7 +135,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#D87070"
                 android:padding="16dp"
-                android:text="Fail \n Parcel"
+                android:text="Fail \n Job"
                 android:textAlignment="center"
                 android:textStyle="bold" />
 
@@ -97,7 +151,7 @@
                 android:layout_weight="1"
                 android:backgroundTint="#A1DA78"
                 android:padding="16dp"
-                android:text="Complete \n Parcel"
+                android:text="Complete \n Job"
                 android:textAlignment="center"
                 android:textStyle="bold" />
         </LinearLayout>
