--- a/app/src/main/res/layout/barcode_list.xml
+++ b/app/src/main/res/layout/barcode_list.xml
@@ -10,7 +10,7 @@
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:clickable="true"
-        android:paddingLeft="8dp"
+        android:padding="8dp"
         android:textSize="24sp"
         android:textStyle="bold" />
 </RelativeLayout>
