--- a/app/src/main/res/layout/content_welcome.xml
+++ b/app/src/main/res/layout/content_welcome.xml
@@ -21,6 +21,13 @@
         android:adjustViewBounds="true"
         app:srcCompat="@mipmap/hermes_logo" />
 
+    <TextView
+        android:id="@+id/txt_welcome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textSize="18sp" />
+
     <Button
         android:id="@+id/button_continue"
         android:layout_width="match_parent"
