--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:buttonStyle">@style/ButtonColor</item>
     </style>
 
     <style name="AppTheme.NoActionBar">
@@ -16,6 +17,11 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+    <style name="ButtonColor" parent="@android:style/Widget.Button">
+        <item name="android:backgroundTint">#63b4f4</item>
+        <item name="android:elevation">2dp</item>
+    </style>
 
 </resources>
 
